--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/_ui/responsive/theme-alpha/css/main-en.css
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/_ui/responsive/theme-alpha/css/main-en.css
@@ -4414,7 +4414,8 @@ height: 40px;
   min-height: 100vh;
   
 }
-.page-miza-homepage .servicePortfolioItemInner1{
+
+/* .page-miza-homepage .servicePortfolioItemInner1{
  
   width: 100%;
   min-height: 700px;
@@ -4433,7 +4434,51 @@ height: 40px;
 
    width: 100%;
   min-height: 500px;
+} */
+
+
+.page-miza-homepage  .servicePortfolioItem:nth-child(odd) .servicePortfolioItemInner1:nth-child(odd){
+  width: 100%;
+height: 500px;
 }
+
+.page-miza-homepage  .servicePortfolioItem:nth-child(odd) .servicePortfolioItemInner1:nth-child(odd) img{
+  width: 100%;
+height: 500px;
+}
+
+.page-miza-homepage .servicePortfolioItem:nth-child(odd) .servicePortfolioItemInner1:nth-child(even){
+  width: 100%;
+height: 700px;
+}
+
+.page-miza-homepage .servicePortfolioItem:nth-child(odd) .servicePortfolioItemInner1:nth-child(even) img{
+  width: 100%;
+height: 700px;
+}
+
+.page-miza-homepage .servicePortfolioItem:nth-child(even) .servicePortfolioItemInner1:nth-child(odd){
+  width: 100%;
+height: 700px;
+}
+
+.page-miza-homepage .servicePortfolioItem:nth-child(even) .servicePortfolioItemInner1:nth-child(odd) img{
+  width: 100%;
+height: 700px;
+}
+
+.page-miza-homepage .servicePortfolioItem:nth-child(even) .servicePortfolioItemInner1:nth-child(even){
+  width: 100%;
+height: 500px;
+}
+
+.page-miza-homepage .servicePortfolioItem:nth-child(even) .servicePortfolioItemInner1:nth-child(even) img{
+  width: 100%;
+height: 500px;
+}
+
+
+/* 
 .page-miza-homepage .servicePortfolioItem:nth-child(odd) .servicePortfolioItemInner1{
  
   width: 100%;
@@ -4453,7 +4498,7 @@ height: 40px;
  
   width: 100%;
   min-height: 700px;
-}
+} */
 .page-miza-homepage .servicePortfolioItemInner{
   border: 5px solid #fff;
 /*    border-radius: 10px;*/
